Add all tests for weight/height and conversions